# intent-attention-kernel

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release_notes.md
benchmarks/: bench_adaptive_format_attention.py  bench_block_router.py  bench_cost_model.py  bench_cpu_reference.py  bench_dynamic_scoring.py  bench_fused_selected_quant_decode.py  bench_intent_quant.py  bench_intent_quant_attention.py  bench_kv_memory_manager.py  bench_kv_quant.py  bench_mla_decode.py  bench_prefetch.py  bench_savings.py  bench_specattn.py  bench_triton_adaptive_format_attention.py  bench_triton_intent_quant_attention.py
docs/: adaptive_format_attention.md  architecture.md  attention_layout.md  block_router.md  dynamic_scoring.md  fused_selected_quant_kernel.md  gpu_benchmarking.md  gpu_kernel_plan.md  index.html  intent_quant.md  intent_quant_attention_kernel.md  kv_quantization.md  prefetch.md  repo_metadata.md  reproducibility.md  research_summary.md  results_cpu.md  results_template.md  triton_adaptive_format_attention.md  triton_mla_decode.md  validation_plan.md
examples/: cpu_adaptive_kv_runtime_demo.py  end_to_end_router_demo.py  llama_patch_demo.py
experiments/: gpu_decode_benchmark.py  llm_quality_validation.py
tests/: test_adaptive_format_attention.py  test_block_metadata.py  test_block_router.py  test_block_scorer.py  test_block_table.py  test_causal_attention.py  test_cost_model.py  test_end_to_end_router.py  test_fused_selected_quant_decode.py  test_hf_patch.py  test_intent_quant.py  test_intent_quant_attention.py  test_kv_memory_manager.py  test_kv_quant.py  (+11 more)
(+28 files in other folders)
