[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intent-attention"
version = "0.1.0"
description = "Intent-aware KV execution prototype for agentic long-context inference: semantic block selection, dynamic scoring, speculative prefetch, mixed-precision quantization policy simulation, and future GPU kernels"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Intent Attention Kernel Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "tabulate>=0.9",
    "black>=24.0",
    "ruff>=0.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["intent_attention*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::FutureWarning"]
